--- a/NN/plots_preds_latex.tex
+++ b/NN/plots_preds_latex.tex
@@ -1,6 +1,6 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots_preds/lstm-plots/R2-0.9655.png}
-    \caption{R2-0.9655 - R-Squared: 0.97}
+    \includegraphics[width=0.8\textwidth]{plots_preds/R2-69.68-Sig1HiddenLayer-Temp.png}
+    \caption{Prediction of Temp with Sig1HiddenLayer epochs:200 - R-Squared: 0.70}
 \end{figure}
