--- a/NN/tables/backward.tex
+++ b/NN/tables/backward.tex
@@ -1,11 +1,18 @@
 \begin{longtable}{lr}
 \hline
- features                        &    R2 \\
+ features                                                                                                                                    &    R2 \\
 \hline
- time, flowrate, temp, init conc & 98.54 \\
- flowrate, temp, init conc       &  0.66 \\
- time, temp, init conc           & 94.34 \\
- time, flowrate, init conc       & 98.02 \\
- time, flowrate, temp            & 95.41 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp, m & 82.44 \\
+ Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp, m             & 76.24 \\
+ SG Coating, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp, m               & 76.24 \\
+ SG Coating, Temp Alk Sol, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp, m            & 76.24 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp, m                     & 78.37 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp, m         & 75.31 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp, m                 & 77.73 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp, m                   & 76.41 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Cure Time (min), Cure Temp, m            & 74.24 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Temp, m                  & 75.63 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), m            & 65.18 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp    & 61.71 \\
 \hline
 \end{longtable}
