--- a/NN/tables/forward.tex
+++ b/NN/tables/forward.tex
@@ -1,16 +1,12 @@
 \begin{longtable}{lr}
 \hline
- features                        &    R2 \\
+ features         &     R2 \\
 \hline
- time                            & 93.84 \\
- flowrate                        & -0.79 \\
- temp                            &  0.69 \\
- init conc                       &  1.47 \\
- flowrate, time                  & 95.32 \\
- temp, time                      & 93.29 \\
- init conc, time                 & 94.95 \\
- temp, time, flowrate            & 95.21 \\
- init conc, time, flowrate       & 97.84 \\
- temp, time, flowrate, init conc & 97.39 \\
+ Pco2             &  -4.32 \\
+ Pch4             & -14.19 \\
+ rate             &  57.65 \\
+ Pco2, rate       &  60.73 \\
+ Pch4, rate       &  53.38 \\
+ Pch4, rate, Pco2 &  41.27 \\
 \hline
 \end{longtable}
