--- a/NN/tables/jackknife.tex
+++ b/NN/tables/jackknife.tex
@@ -2,9 +2,8 @@
 \hline
  Feature   &   Sensitivity &    Variance \\
 \hline
- time      &     97.1785   & 0           \\
- flowrate  &      6.05278  & 2.01948e-28 \\
- init conc &      1.83885  & 0           \\
- temp      &      0.425639 & 2.01948e-28 \\
+ rate      &       50.3669 & 3.15544e-30 \\
+ Pco2      &      -13.4093 & 5.04871e-29 \\
+ Pch4      &      -19.9455 & 5.04871e-29 \\
 \hline
 \end{longtable}
