--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,23 +1,30 @@
 \begin{longtable}{llrlrr}
 \hline
- model                                 & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
+ model                                      & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
  \hline
-\multirow{16}{*}{TanhReluFFNN} & 98.5 ± 0.8  &  0.01 & [8, 4]         &         12 &      200 \\
-                                       & 98.2 ± 1.0  &  0.02 & [8, 4]         &         12 &      100 \\
-                                       & 96.3 ± 2.9  &  0.03 & [8, 4]         &         12 &       50 \\
-                                       & 94.8 ± 0.8  &  0.05 & [10]           &         10 &       50 \\
-                                       & 87.9 ± 4.8  &  0.11 & [10]           &         10 &      100 \\
-                                       & 86.6 ± 5.9  &  0.12 & [10]           &         10 &      200 \\
-                                       & 84.3 ± 3.9  &  0.14 & [10]           &         10 &       20 \\
-                                       & 76.1 ± 16.5 &  0.21 & [8, 4]         &         12 &       20 \\
-                                       & 73.9 ± 1.9  &  0.23 & [15, 5]        &         20 &       20 \\
-                                       & 71.4 ± 10.2 &  0.25 & [15, 5]        &         20 &       50 \\
-                                       & 68.6 ± 0.6  &  0.27 & [15, 5]        &         20 &      100 \\
-                                       & 67.8 ± 0.2  &  0.28 & [15, 5]        &         20 &      200 \\
-                                       & 57.5 ± 6.2  &  0.37 & [15, 10, 3]    &         28 &       20 \\
-                                       & 43.2 ± 16.9 &  0.5  & [15, 10, 3]    &         28 &      100 \\
-                                       & 42.9 ± 17.2 &  0.5  & [15, 10, 3]    &         28 &      200 \\
-                                       & 39.0 ± 19.3 &  0.53 & [15, 10, 3]    &         28 &       50 \\
+Linear1HiddenLayer                  & 51.5 ± 1.5  &  0.4  & [10]           &         10 &       20 \\
+ \hline
+\multirow{3}{*}{Linear2HiddenLayer} & 51.1 ± 5.8  &  0.41 & [8, 4]         &         12 &       20 \\
+                                            & 45.1 ± 1.8  &  0.46 & [15, 5]        &         20 &       50 \\
+                                            & 43.7 ± 3.2  &  0.47 & [8, 4]         &         12 &       50 \\
+ \hline
+Sig1HiddenLayer                     & 43.1 ± 12.9 &  0.47 & [10]           &         10 &       50 \\
+ \hline
+\multirow{3}{*}{Linear1HiddenLayer} & 43.0 ± 3.9  &  0.48 & [10]           &         10 &       50 \\
+                                            & 42.9 ± 0.3  &  0.48 & [10]           &         10 &      100 \\
+                                            & 42.8 ± 0.0  &  0.48 & [10]           &         10 &      200 \\
+ \hline
+\multirow{4}{*}{Linear2HiddenLayer} & 42.8 ± 0.2  &  0.48 & [15, 5]        &         20 &      100 \\
+                                            & 42.8 ± 0.0  &  0.48 & [8, 4]         &         12 &      200 \\
+                                            & 42.8 ± 0.0  &  0.48 & [15, 5]        &         20 &      200 \\
+                                            & 42.7 ± 0.4  &  0.48 & [8, 4]         &         12 &      100 \\
+ \hline
+Sig1HiddenLayer                     & 42.6 ± 16.8 &  0.48 & [10]           &         10 &       20 \\
+ \hline
+Linear2HiddenLayer                  & 40.1 ± 10.7 &  0.5  & [15, 5]        &         20 &       20 \\
+ \hline
+\multirow{2}{*}{Sig1HiddenLayer}    & 35.4 ± 17.1 &  0.54 & [10]           &         10 &      100 \\
+                                            & 25.6 ± 26.1 &  0.62 & [10]           &         10 &      200 \\
 \hline
 \end{longtable}
