--- a/NN/tables/weight-analysis.tex
+++ b/NN/tables/weight-analysis.tex
@@ -2,9 +2,8 @@
 \hline
  Feature   &   Weight Importance \\
 \hline
- time      &            0.792844 \\
- init conc &            0.746556 \\
- flowrate  &            0.692    \\
- temp      &            0.396428 \\
+ Pch4      &            0.619862 \\
+ Pco2      &            0.55418  \\
+ rate      &            0.525662 \\
 \hline
 \end{longtable}
