--- a/NN/plots_latex.tex
+++ b/NN/plots_latex.tex
@@ -1,24 +1,24 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
-    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+    \includegraphics[width=0.8\textwidth]{plots/Linear1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{Linear1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
-    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+    \includegraphics[width=0.8\textwidth]{plots/Linear2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{Linear2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
-    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+    \includegraphics[width=0.8\textwidth]{plots/Linear2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{Linear2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 20)}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
-    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+    \includegraphics[width=0.8\textwidth]{plots/Sig1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{Sig1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
 \end{figure}
