--- a/NN/plots_preds_latex.tex
+++ b/NN/plots_preds_latex.tex
@@ -1,6 +1,6 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots_preds/R2-69.68-Sig1HiddenLayer-Temp.png}
-    \caption{Prediction of Temp with Sig1HiddenLayer epochs:200 - R-Squared: 0.70}
+    \includegraphics[width=0.8\textwidth]{plots_preds/R2-91.77-Tanh2HiddenLayer-rate.png}
+    \caption{Prediction of rate with Tanh2HiddenLayer epochs:50 - R-Squared: 0.92}
 \end{figure}
