--- a/NN/plots_latex.tex
+++ b/NN/plots_latex.tex
@@ -1,14 +1,164 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/Linear1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
-    \caption{Linear1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
+    \includegraphics[width=0.8\textwidth]{plots/Sig2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{Sig2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 20)}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/Linear2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
-    \caption{Linear2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
+    \includegraphics[width=0.8\textwidth]{plots/Sig2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{Sig2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/Tanh2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{Tanh2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/Tanh2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{Tanh2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{TanhFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{TanhFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{TanhFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{TanhFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhLinFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{TanhLinFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhLinFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{TanhLinFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhLinFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{TanhLinFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhLinFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{TanhLinFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/Sig1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{Sig1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/SigReLU2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{SigReLU2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/SigReLU2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{SigReLU2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/Tanh1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{Tanh1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/Relu2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{Relu2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/Relu2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{Relu2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/LinearFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{LinearFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/LinearFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{LinearFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/LinearFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{LinearFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/LinearFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{LinearFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/Linear1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{Linear1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
 \end{figure}
 
 \begin{figure}[H]
@@ -19,6 +169,108 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/Sig1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
-    \caption{Sig1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
+    \includegraphics[width=0.8\textwidth]{plots/Linear2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{Linear2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReLUSig2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{ReLUSig2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReLUSig2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{ReLUSig2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/Relu1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{Relu1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluTanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{ReluTanhFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluTanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{ReluTanhFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluTanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{ReluTanhFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluTanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{ReluTanhFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{ReluFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{ReluFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{ReluFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{ReluFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/FFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{FFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/FFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{FFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/FFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{FFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/FFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{FFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/GRNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{GRNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/RBFN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{RBFN - R2 vs. Number of Epochs (Hidden Size: 10)}
 \end{figure}
